--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "npm-run-all build --parallel \"dev:*\"",
 		"dev:build-server": "cross-env NODE_ENV=development tsc --skipLibCheck server.ts --outDir ./build --esModuleInterop",
 		"dev:node": "cross-env NODE_ENV=development remix dev -c \"node ./build/server.js\"",
-		"start": "cross-env NODE_ENV=production node ./build/server.js",
+		"start": "cross-env NODE_ENV=production netlify dev",
 		"typecheck": "tsc -b",
 		"theme": "chakra-cli tokens app/components/utils/theme.ts"
 	},
@@ -16,8 +16,10 @@
 		"@emotion/react": "^11.11.0",
 		"@emotion/server": "^11.11.0",
 		"@emotion/styled": "^11.11.0",
+		"@netlify/functions": "^1.6.0",
 		"@remix-run/css-bundle": "^1.16.0",
 		"@remix-run/express": "^1.16.0",
+		"@remix-run/netlify": "^1.16.1",
 		"@remix-run/node": "^1.16.0",
 		"@remix-run/react": "^1.16.0",
 		"@remix-run/serve": "^1.16.0",
